# gdx-imgui

./: .gitignore  build.gradle  gradle.properties  mingw-install-macos.sh  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
lib/: .gitignore  build.gradle  build.xml
lib/jni/: Android.mk  CMakeLists.txt  build-linux32.xml  build-linux64.xml  build-macosx32.xml  build-macosx64.xml  build-windows32.xml  build-windows64.xml  com.borschlab.gdx.imgui.ImGui.cpp  com.borschlab.gdx.imgui.ImGui.h  utils.h
lib/jni/imgui/: CMakeLists.txt  imgui_demo.cpp
lib/jni/imgui/examples/opengl2_example/: imgui_impl_glfw.cpp
lib/src/main/java/: _generate.java
lib/src/main/java/com/borschlab/gdx/imgui/: ImBool.java  ImFloat.java  ImGui.java  ImGuiDrawCmd.java  ImGuiDrawList.java  ImGuiKey.java  ImGuiSetCond.java  ImGuiStyleVar.java  ImGuiTexData.java  ImGuiTreeNodeFlags.java  ImGuiWindowFlags.java  ImStage.java  ImVec2.java  Test.java  ValueRef.java  _jniGenBuild.java
test/: build.gradle
test/src/main/java/com/github/octopussy/test/: Demo01.java  ImDemoApp.java  Launcher.java  PortedNativeDemo.java  Tmp.java  WindowDemo.java  WindowDemo01.java  WindowDemo02.java
